--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 authors = ["Eric Woolsey"]
 edition = "2021"
 description = "represents a set of data points as a function of time and performs various mathematical operations on the data"
-license = "GNU General Public License v3.0 only"
+license = "GPL-3.0"
 readme = "README.md"
 repository = "https://github.com/ewoolsey/time-func"
 
